Updated german translations

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Schlichter Zeichenblock</string>
+    <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Zeichenblock</string>
     <string name="open_file">Datei öffnen</string>
     <string name="eraser">Radierer</string>
@@ -14,11 +14,11 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Eine Leinwand auf der du mit verschiedenen Farben zeichnen kannst.</string>
     <string name="app_long_description">
-        Willst du etwas zeichnen, hast aber gerade kein Papier dafür? Diese App wird perfekt zu dir passen! Wähle eine Farbe aus und zeichne. Du kannst deine Zeichnungen speichern oder direkt per Email oder auf sozialen Netzwerken teilen.
+        Willst du etwas zeichnen, hast aber gerade kein Papier dafür? Diese Anwendung wird perfekt zu dir passen! Wähle eine Farbe aus und zeichne. Du kannst deine Zeichnungen speichern oder direkt per E-Mail oder auf sozialen Netzwerken teilen.
 
         Beinhaltet keine Werbung oder unnötige Berechtigungen. Sie ist komplett Open Source, alle verwendeten Farben sind anpassbar.
 
-        Diese App ist nur eine aus einer größeren Serie von schlichten Apps. Der Rest davon findet sich auf http://www.simplemobiletools.com
+        Diese Anwendung ist nur eine aus einer größeren Serie. Der Rest davon findet sich auf http://www.simplemobiletools.com
     </string>
 
     <!--
