--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -1,6 +1,6 @@
 <resources>
-    <string name="app_name">Prosty Szkicownik</string>
-    <string name="app_launcher_name">Prosty Szkicownik</string>
+    <string name="app_name">Prosty szkicownik</string>
+    <string name="app_launcher_name">Prosty szkicownik</string>
     <string name="open_file">Otwórz plik</string>
     <string name="eraser">Gumka</string>
     <string name="failed_to_load_image">Nie udało się wczytać obrazu %s</string>
