--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">简易画图</string>
-    <string name="app_launcher_name">画图</string>
+    <string name="app_name">简易绘图</string>
+    <string name="app_launcher_name">绘图</string>
     <string name="open_file">打开文件</string>
     <string name="eraser">橡皮</string>
-    <string name="failed_to_load_image">无法载入图片 %s</string>
+    <string name="failed_to_load_image">无法加载图片 %s</string>
 
     <!-- Settings -->
     <string name="show_brush_size">显示笔刷尺寸工具</string>
@@ -12,11 +12,11 @@
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">可以使用不同颜色画图的画布。</string>
+    <string name="app_short_description">可以使用不同颜色绘图的画布。</string>
     <string name="app_long_description">
         想要画些什么却没有纸？这个应用正好适合你。选一个颜色开始作画吧。你可以保存绘画，也可以通过邮件或社交网站分享。
         
-        不包含广告及非必要权限，而且完全开源，并提供自定义颜色。
+        不包含广告及非必要权限，完全开源，并提供自定义颜色。
         
         此应用只是一系列应用中的一项，你可以在这里找到其他应用 http://www.simplemobiletools.com
     </string>
