--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -7,6 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Afficher l\'outil de sélection de la taille du pinceau</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
     <string name="clear">Tout effacer</string>
     <string name="change_background_color">Changer le fond</string>
 
@@ -18,7 +19,7 @@
 
         Pas de pubs ni de permissions inutiles. Totalement open-source et propose des couleurs personnalisables.
 
-        Cette application fait partie d\'un ensemble d\'applications. Vous pouvez trouver les autres sur http://www.simplemobiletools.com
+        Cette application fait partie d\'un ensemble d\'applications. Vous pouvez trouver les autres sur https://www.simplemobiletools.com
     </string>
 
     <!--
