--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,6 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Позволить изменять размер кисти</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
     <string name="clear">Очистить</string>
     <string name="change_background_color">Изменить цвет фона</string>
 
@@ -18,7 +19,7 @@
 
         Без рекламы и излишних прав доступа. Полностью открытое ПО, а также есть тёмная тема интерфейса.
 
-        Это только одно приложение из множества других в серии. Вы можете найти остальные на http://www.simplemobiletools.com
+        Это только одно приложение из множества других в серии. Вы можете найти остальные на https://www.simplemobiletools.com
     </string>
 
     <!--
