--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Εμφάνιση του εργαλείου των διαστάσεων του πινέλου</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Καθαρισμός</string>
     <string name="change_background_color">Αλλαγή του χρώματος παρασκηνίου</string>
 
