--- a/app/src/main/res/values-hr/strings.xml
+++ b/app/src/main/res/values-hr/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Prikaži alat za odabir veličine četkica</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Očisti</string>
     <string name="change_background_color">Promjeni boju pozadine</string>
 
