--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Pokaż narzędzie rozmiaru pędzla</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Wyczyść</string>
     <string name="change_background_color">Zmień kolor tła</string>
 
