--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -7,7 +7,7 @@
 
     <!-- Settings -->
     <string name="show_brush_size">Позволить изменять размер кисти</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas</string>
+    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
     <string name="clear">Очистить</string>
     <string name="change_background_color">Изменить цвет фона</string>
 
