--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -1,24 +1,25 @@
 <resources>
-    <string name="app_name">Simple Disegna</string>
+    <string name="app_name">Simple Draw</string>
     <string name="app_launcher_name">Disegna</string>
     <string name="open_file">Apri file</string>
     <string name="eraser">Gomma</string>
     <string name="failed_to_load_image">Impossibile caricare l\'immagine %s</string>
 
     <!-- Settings -->
-    <string name="show_brush_size">Dimensione gomma</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
+    <string name="show_brush_size">Dimensione della gomma</string>
+    <string name="allow_zooming_canvas">Permetti l\'ingrandimento con i gesti</string>
     <string name="clear">Pulisci</string>
     <string name="change_background_color">Cambia colore di sfondo</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Una tela su cui puoi disegnare con diversi colori.</string>
-    <string name="app_long_description">Vuoi disegnare qualcosa ma non hai carta? Quest\'app fa per te. Devi solo selezionare un colore e disegnare. Puoi salvare i disegni o condividerli direttamente via email o sui social network.
+    <string name="app_long_description">
+        Vuoi disegnare qualcosa ma non hai carta? Quest\'app fa per te. Devi solo selezionare un colore e disegnare. Puoi salvare i disegni o condividerli direttamente via email o sui social network.
         
         Non contiene pubblicità né richiede permessi non necessari. È completamente open source e permette di cambiare i colori.
         
-        Quest\'app è solo un pezzo di una serie più grande di app. Puoi vedere le rimanenti su https://www.simplemobiletools.com
+        Quest\'app fa parte di una serie più grande. Puoi trovare le altre su https://www.simplemobiletools.com
     </string>
 
     <!--
