--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -1,25 +1,25 @@
 <resources>
-    <string name="app_name">Απλό Σχέδιο</string>
-    <string name="app_launcher_name">Σχέδιο</string>
+    <string name="app_name">Απλή Ζωγραφική</string>
+    <string name="app_launcher_name">Ζωγραφική</string>
     <string name="open_file">Άνοιγμα αρχείου</string>
-    <string name="eraser">Σβήστρα</string>
+    <string name="eraser">Γόμμα</string>
     <string name="failed_to_load_image">Αποτυχία φόρτωσης της εικόνας %s</string>
 
     <!-- Settings -->
     <string name="show_brush_size">Εμφάνιση του εργαλείου των διαστάσεων του πινέλου</string>
-    <string name="allow_zooming_canvas">Allow zooming the canvas with gestures</string>
+    <string name="allow_zooming_canvas">Αποδοχή μεγέθυνσης καμβά με χειρονομίες</string>
     <string name="clear">Καθαρισμός</string>
-    <string name="change_background_color">Αλλαγή του χρώματος παρασκηνίου</string>
+    <string name="change_background_color">Αλλαγή χρώματος παρασκηνίου</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
-    <string name="app_short_description">Ένας καμβάς, όπου μπορείς να σχεδιάσεις με διαφορετικά χρώματα.</string>
+    <string name="app_short_description">Ένας καμβάς, όπου μπορείτε να σχεδιάσετε με διαφορετικά χρώματα.</string>
     <string name="app_long_description">
-        Θέλεις να σχεδιάσεις κάτι, αλλά δεν έχεις χαρτί; Αυτή η εφαρμογή θα σου ταιριάξει τέλεια. Απλά επέλεξε ένα χρώμα και σχεδίασε! Μπορείς να αποθηκεύσεις το σχέδιο, ή να το μοιραστείς, απευθείας, μέσω ηλεκτρονικού ταχυδρομείου, ή κοινωνικών δικτύων.
+        Θέλετε να σχεδιάσετε κάτι, αλλά δεν έχετε χαρτί; Αυτή η εφαρμογή θα σας ταιριάξει τέλεια. Απλά επιλέξτε ένα χρώμα και σχεδιάστε! Μπορείτε να αποθηκεύσετε το σχέδιο, ή να το μοιραστείτε, απευθείας, μέσω ηλεκτρονικού ταχυδρομείου, ή κοινωνικών δικτύων.
 
-        Δεν περιέχει διαφημίσεις ούτε ζητά περιττά δικαιώματα. Είναι εντελώς ανοιχτού κώδικα. Επιτρέπει προσαρμοσμένα χρώματα.
+        Δεν περιέχει διαφημίσεις ούτε απαιτούνται περιττά δικαιώματα. Είναι εντελώς ανοιχτού κώδικα. Επιτρέπει προσαρμοσμένα χρώματα.
 
-        Αυτή η εφαρμογή είναι ένα κομμάτι από μία μεγαλύτερη σειρά εφαρμογών. Μπορείς να βρεις τις υπόλοιπες στο  https://www.simplemobiletools.com
+        Αυτή η εφαρμογή είναι ένα μέρος από μία μεγαλύτερη σειρά εφαρμογών. Μπορείτε να βρείτε τις υπόλοιπες στο  https://www.simplemobiletools.com
     </string>
 
     <!--
